Bug 1578907 - MacOS 10.15 Beta - Flash File Picker broken r?spohl a=lizzard

Allow access to extra services needed to open file pickers from the Flash process on 10.15.

Differential Revision: https://phabricator.services.mozilla.com//D48145

--HG--
extra : histedit_source : 29a0078979fafb1df77d61909b7761c491c90680